# pipeline_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  dependencies.cmake
.devcontainer/: Dockerfile  devcontainer.json
include/pipeline_project/: alu.hpp  control_flow_unit.hpp  control_unit.hpp  datapath.hpp  example.hpp  immediate.hpp  memory.hpp  register_file.hpp  simulator.hpp  utils.hpp
scripts/: assembler.py  gui.py  instruction_parser.py  output.txt  r_type_test.asm  r_type_test_input.txt  random.txt  test.asm
src/: CMakeLists.txt  example.cpp
test/: CMakeLists.txt  test_alu.cpp  test_control_flow_unit.cpp  test_control_unit.cpp  test_demo.cpp  test_example.cpp  test_immediate.cpp  test_memory.cpp  test_register_file.cpp  test_simulator.cpp
test/test_files/: r_type_test_input.txt
